<resources>
    <string name="app_name">Animessenger</string>
    <string name="create_group">To create a group</string>
    <string name="secret_chat">My chats</string>
    <string name="create_channel">Create a channel</string>
    <string name="сontacts">Users</string>
    <string name="calls">Calls</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="invite_friends">Invite friends</string>
    <string name="questions">Questions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="online">online</string>
    <string name="account">Account</string>
    <string name="click_phone_number">click to change phone number</string>
    <string name="click_change_name">click to change name</string>
    <string name="write_yourself">write a little about yourself</string>
    <string name="click_change_photo">click to change photo</string>
    <string name="logout">logout</string>
    <string name="change_name">change name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="enter_phone">Enter your phone number</string>
    <string name="enter_code">Enter code</string>
    <string name="your_phone">Your phone number</string>
    <string name="error">error, try again</string>
    <string name="welcome">Welcome!!!</string>
    <string name="number">+1 XXX XXX XXXX</string>
    <string name="wait_come_code_number">wait now the code will come to your number</string>
    <string name="add_your_name">add your name</string>
    <string name="data_updated">data updated successfully</string>
    <string name="tell_about_yourself">tell me about yourself</string>
    <string name="contacts">Users</string>
    <string name="message">Message</string>
    <string name="type_message...">Type a message...</string>
    <string name="write_message">Write a message</string>
    <string name="chat">Chat</string>
    <string name="recording">recording...</string>
    <string name="upload_picture">upload picture</string>
    <string name="upload_file">upload file</string>
    <string name="clear_chat">clear chat</string>
    <string name="delete_chat">delete chat</string>
    <string name="chat_deleted">Chat deleted</string>
    <string name="chat_cleared">Chat cleared</string>
    <string name="add_member">Add member</string>
    <string name="members">members</string>
    <string name="group_name">group name</string>
    <string name="add_members">add members</string>
</resources>